Implement static entry lookup

--- a/compressor_test.html
+++ b/compressor_test.html
@@ -6,11 +6,17 @@
 
 <textarea id="uncompressed" cols="40" rows="40">
 [
-  { "key": "key1", "val": "val1" },
-  { "key": "key2", "val": "val2" },
-  { "key": "key3", "val": "val3" },
-  { "key": "key4", "val": "val4" },
-  { "key": "key5", "val": "val5" }
+  { "key": ":host", "val": "www.google.com" },
+  { "key": ":method", "val": "GET" },
+  { "key": ":path", "val": "/" },
+  { "key": ":scheme", "val": "https" },
+  { "key": ":version", "val": "HTTP/1.1" },
+  { "key": "accept", "val": "text/html,application/xhtml+xml,application/xml;q=0.9,*/*;q=0.8" },
+  { "key": "accept-charset", "val": "ISO-8859-1,utf-8;q=0.7,*;q=0.3" },
+  { "key": "accept-encoding", "val": "gzip,deflate,sdch" },
+  { "key": "accept-language", "val": "en-US,en;q=0.8" },
+  { "key": "cache-control", "val": "max-age=0" },
+  { "key": "user-agent", "val": "Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.32 (KHTML, like Gecko) Chrome/27.0.1425.0 Safari/537.32" }
 ]
 </textarea>
 <textarea id="intermediate" cols="40" rows="40">
