--- a/compressor_test.html
+++ b/compressor_test.html
@@ -15,7 +15,8 @@
   { "key": "accept-encoding", "val": "gzip,deflate,sdch" },
   { "key": "accept-language", "val": "en-US,en;q=0.8" },
   { "key": "cache-control", "val": "max-age=0" },
-  { "key": "user-agent", "val": "Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.32 (KHTML, like Gecko) Chrome/27.0.1425.0 Safari/537.32" }
+  { "key": "user-agent", "val": "Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.32 (KHTML, like Gecko) Chrome/27.0.1425.0 Safari/537.32" },
+  { "key": "custom-header", "val": "custom-value" }
 ]
 </textarea>
 <textarea id="intermediate" cols="40" rows="40">
