Implement Huffman table building

--- a/compressor_test.html
+++ b/compressor_test.html
@@ -1,4 +1,5 @@
 <script src="compressor.js"></script>
+<script src="huffman.js"></script>
 
 <input id="roundTripButton" type="button" value="Round-trip" />
 <br />
