Add stub HeaderDecoder

--- a/compressor_test.html
+++ b/compressor_test.html
@@ -1,6 +1,7 @@
 <script src="encoding_context.js"></script>
 <script src="header_common.js"></script>
 <script src="header_encoder.js"></script>
+<script src="header_decoder.js"></script>
 <script src="huffman.js"></script>
 <script src="compressor.js"></script>
 
