--- a/compressor_test.html
+++ b/compressor_test.html
@@ -8,21 +8,19 @@
 <p>Header sets equal: <span id="headerSetsEqual"></span></p>
 
 <textarea id="uncompressed" cols="40" rows="40">
-[
-  [ ":host", "www.google.com" ],
-  [ ":method", "GET" ],
-  [ ":path", "/" ],
-  [ ":scheme", "https" ],
-  [ ":version", "HTTP/1.1" ],
-  [ "accept", "text/html,application/xhtml+xml,application/xml;q=0.9,*/*;q=0.8" ],
-  [ "accept-charset", "ISO-8859-1,utf-8;q=0.7,*;q=0.3" ],
-  [ "accept-encoding", "gzip,deflate,sdch" ],
-  [ "accept-language", "en-US,en;q=0.8" ],
-  [ "cache-control", "max-age=0" ],
-  [ "user-agent", "Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.32 (KHTML, like Gecko) Chrome/27.0.1425.0 Safari/537.32" ],
-  [ "custom-header", "custom-value" ],
-  [ "p3p", "" ]
-]
+:scheme: https
+:host: www.google.com
+:path: /
+:method: GET
+accept: text/html,application/xhtml+xml,application/xml;q=0.9,*/*;q=0.8
+accept-charset: ISO-8859-1,utf-8;q=0.7,*;q=0.3
+accept-encoding: gzip,deflate,sdch
+accept-language: en-US,en;q=0.8
+user-agent: Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.32 (KHTML, like Gecko) Chrome/27.0.1425.0 Safari/537.32
+cache-control: max-age=0
+:version: HTTP/1.1
+custom-header: custom-value
+p3p: 
 </textarea>
 <textarea id="encoderContext" cols="40" rows="40">
 </textarea>
@@ -51,6 +49,25 @@ var roundTripButton = document.getElementById('roundTripButton');
 
 var headerEncoder = new HeaderEncoder(REQUEST, 4);
 var headerDecoder = new HeaderDecoder(REQUEST);
+
+function headerSetFromString(str) {
+  var headerStrs = str.split('\n');
+  return headerStrs.map(function(headerStr) {
+    var match = headerStr.match(/^(.*): ?(.*)$/);
+    return match ? [match[1], match[2]] : null;
+  }).filter(function(e) {
+    return e;
+  });
+}
+
+function headerSetToString(headerSet) {
+  var str = '';
+  for (var i = 0; i < headerSet.length; ++i) {
+    var header = headerSet[i];
+    str += header[0] + ': ' + header[1] + '\n';
+  }
+  return str;
+}
 
 // TODO(akalin): Handle lower-casing.
 function headerCompare(header1, header2) {
@@ -90,7 +107,10 @@ function headerSetsEqual(headerSet1, headerSet2) {
 
 function doRoundTrip() {
   var input = uncompressedTextarea.value;
-  var headerSet = JSON.parse(input);
+  var headerSet = headerSetFromString(input);
+
+  uncompressedTextarea.value = headerSetToString(headerSet);
+
   var encodedHeaderSet = headerEncoder.encodeHeaderSet(headerSet);
 
   encoderContextTextarea.textContent =
@@ -119,8 +139,7 @@ function doRoundTrip() {
   decoderContextTextarea.textContent =
     JSON.stringify(headerDecoder.encodingContext_, null, '  ');
 
-  uncompressed2Textarea.textContent =
-    JSON.stringify(deserializedHeaderSet, null, '  ');
+  uncompressed2Textarea.textContent = headerSetToString(deserializedHeaderSet);
 
   var doHeaderSetsEqual = headerSetsEqual(headerSet, deserializedHeaderSet);
   headerSetsEqualSpan.textContent = (doHeaderSetsEqual ? "true" : "false");
